--- a/scss/components/_crypto-header.scss
+++ b/scss/components/_crypto-header.scss
@@ -12,7 +12,7 @@
     &-option{
       width: 69px;
       height: 29px;
-      background-image: url(../../images/icon-sprite.png);
+      background-image: url(../images/icon-sprite.png);
     }
     .icon__visa{
       background-position: -99px -59px;
