--- a/scss/components/_process.scss
+++ b/scss/components/_process.scss
@@ -20,7 +20,7 @@
       content: "";
       width: 30px;
       height: 135px;
-      background-image: url(../../images/buy-crypto-pattren-vr.png);
+      background-image: url(../images/buy-crypto-pattren-vr.png);
       background-repeat: no-repeat;
       display: inline-block;
       position: absolute;
@@ -31,7 +31,7 @@
       content: "";
       width: 100%;
       height: 51px;
-      background-image: url(../../images/buy-crypto-pattren-hr.png);
+      background-image: url(../images/buy-crypto-pattren-hr.png);
       background-repeat: no-repeat;
       display: inline-block;
       position: absolute;
