form image path update

--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -48,7 +48,7 @@
   .location__icon{
     width: 39px;
     height: 39px;
-    background: url(../../images/icon-sprite.png) -10px -108px;
+    background: url(../images/icon-sprite.png) -10px -108px;
   }
 }
 
@@ -91,7 +91,7 @@
   &-icon{
     width: 39px;
     height: 39px;
-    background: url(../../images/icon-sprite.png) -10px -108px;
+    background: url(../images/icon-sprite.png) -10px -108px;
   }
 }
 .crypto__coin{
